--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+
+    <header>
+        <h1 style="text-align: center; padding-top: 50px; color: rgb(90, 235, 0); ">
+            INDEPENDANCE DAY COUNTDOWN
+        </h1>
+    </header>
     <div class="main">
       <div class="bg-timer">
         <h1>
@@ -34,7 +40,7 @@
       </div>
     </div>
     <div>
-        
+
     </div>
 
     <script src="./app.js"></script>
